// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AirglowPrefabIntegrationTest should call the reducer when the text changes 1`] = `
"<App>
  <Airglow store={[Function: _default]} plugins={{...}} bootstrap={{...}}>
    <AirglowWrapper config={{...}}>
      <StoreProvider store={{...}}>
        <Component>
          <TestComponent color=\\"Purple!\\" onColor={[Function: onColor]}>
            <input value=\\"Purple!\\" onChange={[Function: onChange]} />
          </TestComponent>
        </Component>
      </StoreProvider>
    </AirglowWrapper>
  </Airglow>
</App>"
`;

exports[`AirglowPrefabIntegrationTest should render with default values 1`] = `
"<App>
  <Airglow store={[Function: _default]} plugins={{...}} bootstrap={{...}}>
    <AirglowWrapper config={{...}}>
      <StoreProvider store={{...}}>
        <Component>
          <TestComponent color=\\"\\" onColor={[Function: onColor]}>
            <input value=\\"\\" onChange={[Function: onChange]} />
          </TestComponent>
        </Component>
      </StoreProvider>
    </AirglowWrapper>
  </Airglow>
</App>"
`;
